--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
+Codes_Only/* filter=lfs diff=lfs merge=lfs -text
+3D[[:space:]]Models/* filter=lfs diff=lfs merge=lfs -text
